Correct top menu alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -208,7 +208,7 @@ li {
 
 @media only screen and (min-width: 720px) {
     h1 {
-      font-size: 1.8rem;
+        font-size: 1.8rem;
     }
     #stories {
         margin-top: 2rem;
@@ -254,7 +254,7 @@ li {
         width: 100%;
         height: 50px;
         display: flex;
-        justify-content: right;
+        justify-content: flex-end;
         font-family: Fira Sans;
         z-index: 10;
     }
@@ -269,13 +269,13 @@ li {
         margin-top: 50px;
     }
     .select-topic {
-      display: none;
+        display: none;
     }
 }
 
 @media only screen and (min-width: 1200px) {
     #stories {
-      margin-top: 3rem;
+        margin-top: 3rem;
     }
     .chart-wrapper {
         display: flex;
@@ -292,7 +292,7 @@ li {
 
 @media only screen and (min-width: 1600px) {
     #stories {
-      margin-top: 4rem;
+        margin-top: 4rem;
     }
     .container {
         /* max-width: 1440px; */
